package com.EduHubAcademy.asignaturaService.repository;

import com.EduHubAcademy.asignaturaService.model.Asignatura;
import org.springframework.data.jpa.repository.JpaRepository;

public interface AsignaturaRepository extends JpaRepository<Asignatura, Long> {
}
