package com.EduHubAcademy.soporteService.repository;

import org.springframework.data.jpa.repository.JpaRepository;

import com.EduHubAcademy.soporteService.model.Soporte;

public interface SoporteRepository extends JpaRepository<Soporte, Long>{

}
